--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,6 @@ upstream interintel {
 }
 
 server {
-
     listen 80;
 
     location / {
@@ -11,6 +10,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
+    }
+
+    location /static/ {
+        alias /home/app/staticfiles/;
+    }
+
+    location /media/ {
+        alias /home/app/mediafiles/;
     }
 
 }
