--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,13 @@ asgiref==3.7.2
 backports.zoneinfo==0.2.1
 Django==4.2.7
 django-environ==0.11.2
+factory-boy==3.3.0
+Faker==20.1.0
 Pillow==10.1.0
 psycopg2==2.9.9
+python-dateutil==2.8.2
+six==1.16.0
 sqlparse==0.4.4
-typing-extensions==4.8.0
+typing_extensions==4.8.0
 uWSGI==2.0.23
+Faker==20.1.0
