--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,8 @@ services:
   nginx:
     build: ./nginx
     volumes:
-      - static_volume:/home/app/staticfiles
-      - media_volume:/home/app/mediafiles
+      - static_volume:/home/app/web/staticfiles
+      - media_volume:/home/app/web/mediafiles
     ports:
       - "1337:80"
     depends_on:
