--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,12 +12,7 @@ server {
         proxy_redirect off;
     }
 
-    location /static/ {
-        alias /home/app/staticfiles/;
-    }
-
     location /media/ {
-        alias /home/app/mediafiles/;
+        alias /home/app/web/mediafiles/;
     }
-
 }
